Use pre selected 100 features for complex networks
t-SNE is invalid for this task - the analogously correct tool would be autoencoders.

Working around the does-not-work problem, I used a pipeline of Weka filters to get something the bayes nets could feed off.

--- a/jupyter/notebooks/modeling/assessment-DMML.ipynb
+++ b/jupyter/notebooks/modeling/assessment-DMML.ipynb
@@ -694,6 +694,7 @@
    "outputs": [],
    "source": [
     "bestSet = [2, 5, 10]\n",
+    "bestDataDict = {} # copy dataframes for later\n",
     "\n",
     "for i, num in enumerate(bestSet):\n",
     "    k_best_list = pd.DataFrame()\n",
@@ -708,12 +709,13 @@
     "    # run binary NB classifiers for each class\n",
     "    for f, file in enumerate(fileList):\n",
     "        k_best_binary = pd.concat([k_best_list, file['target'].reset_index()], axis=1)\n",
-    "        # print(f\"K BEST BINARY: {k_best_binary}\")\n",
+    "        print(f\"K BEST BINARY shape: {k_best_binary.shape}\")\n",
     "        run_multi_nb_binary(k_best_binary, num, f)\n",
     "\n",
     "    print(f\"\\nMultilabel NB Classifier {num}0:\\n __________________________________\")\n",
     "    k_best_multi = pd.concat([k_best_list, train_smpl['target'].reset_index()], axis=1)\n",
-    "    # print(f\"K BEST MULTI: {k_best_multi}\")\n",
+    "    bestDataDict[f'{num}0'] = k_best_multi.copy()\n",
+    "    print(f\"K BEST MULTI shape: {k_best_multi.shape}\")\n",
     "    run_multi_nb(k_best_multi, num)"
    ]
   },
@@ -914,7 +916,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_train_20 = pd.concat([X_train_20, y_train_20], axis=1)"
+    "data_train_20 = pd.concat([X_train_20, y_train_20], axis=1)\n",
+    "data_test_20 = pd.concat([X_test_20, y_test_20], axis=1)"
    ]
   },
   {
@@ -965,10 +968,66 @@
    "source": [
     "from sklearn.manifold import TSNE\n",
     "# Don't downsize - use it all! train_resampled has some 12k instances, so this takes a while\n",
-    "X_train_wee, _, y_train_wee, _ = train_test_split(X_train_res, y_train_res, test_size=0.95) \n",
-    "X_wee_embeds = TSNE(n_components=2, perplexity=20).fit_transform(X_train_wee.copy())\n",
-    "X_wee_3_embeds = TSNE(n_components=3, perplexity=5).fit_transform(X_train_wee.copy())\n",
-    "X_train_2D_t_emb = TSNE(perplexity=30).fit_transform(train_resampled)"
+    "# X_train_wee, _, y_train_wee, _ = train_test_split(X_train_res, y_train_res, test_size=0.95) \n",
+    "# X_wee_embeds = TSNE(n_components=2, perplexity=20).fit_transform(X_train_wee.copy())\n",
+    "# X_wee_3_embeds = TSNE(n_components=3, perplexity=5).fit_transform(X_train_wee.copy())\n",
+    "# X_train_2D_t_emb = TSNE(perplexity=30).fit_transform(X_train_res)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from sklearn.decomposition import PCA\n",
+    "# from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "# # scaler = MinMaxScaler(feature_range=[0, 1])\n",
+    "\n",
+    "# pca = PCA(n_components=50)\n",
+    "# X_pca_res = pd.DataFrame(pca.fit_transform(X_train_res[X_train_res.columns[:-1]]))\n",
+    "# # Potentially, our data might not require scaling as all of the features spread over the same range (0-255)\n",
+    "# # On the other hand, thislines us up for the \"dense points\" problem, where the interesting values might be \n",
+    "# # numerically close and therefore harder to distinguish unscaled.\n",
+    "# # smpl_data = pd.DataFrame(scaler.fit_transform(smpl_data))\n",
+    "# # smpl_data[\"target\"] = train_smpl[\"target\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import pickle\n",
+    "# # use cached tsne results if we can, we don't have all day\n",
+    "# with open('X_train_2D_t_emb.pickle', 'wb') as f:\n",
+    "#     pickle.dump(X_train_2D_t_emb, f, pickle.HIGHEST_PROTOCOL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "with open('X_train_2D_t_emb.pickle', 'rb') as f:\n",
+    "    unpickled = pickle.load(f)\n",
+    "    X_train_2D_t_emb = unpickled"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plt.figure()\n",
+    "# # plt.scatter(x=X_train_2D_t_emb[:,0], y=X_train_2D_t_emb[:,1], c=y_train_res)\n",
+    "# plt.scatter(x=X_wee_embeds[:,0], y=X_wee_embeds[:,1], c=y_train_wee)\n",
+    "# plt.show()"
    ]
   },
   {
@@ -978,8 +1037,8 @@
    "outputs": [],
    "source": [
     "plt.figure()\n",
-    "# plt.scatter(x=X_train_2D_t_emb[:,0], y=X_train_2D_t_emb[:,1], c=y_train_res)\n",
-    "plt.scatter(x=X_wee_embeds[:,0], y=X_wee_embeds[:,1], c=y_train_wee)\n",
+    "# plt.scatter(x=X_train_2D_t_emb[:,0], y=X_train_2D_t_emb[:,1], c=y_train_res) #train_resampled['target']\n",
+    "plt.scatter(x=unpickled[:,0], y=unpickled[:,1], c=y_train_res)\n",
     "plt.show()"
    ]
   },
@@ -989,16 +1048,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from mpl_toolkits.mplot3d import Axes3D\n",
+    "# from mpl_toolkits.mplot3d import Axes3D\n",
     "\n",
-    "fig = plt.figure()\n",
-    "ax = Axes3D(fig)\n",
-    "for label in range(10):\n",
-    "    x_train_tmp = X_wee_3_embeds[y_train_wee==label]\n",
-    "    ax.scatter(x_train_tmp[:,0], x_train_tmp[:,1], x_train_tmp[:,2], \n",
-    "               alpha=0.75, label=label)\n",
-    "ax.legend()\n",
-    "plt.show()"
+    "# fig = plt.figure()\n",
+    "# ax = Axes3D(fig)\n",
+    "# for label in range(10):\n",
+    "#     x_train_tmp = X_wee_3_embeds[y_train_wee==label]\n",
+    "#     ax.scatter(x_train_tmp[:,0], x_train_tmp[:,1], x_train_tmp[:,2], \n",
+    "#                alpha=0.75, label=label)\n",
+    "# ax.legend()\n",
+    "# plt.show()"
    ]
   },
   {
@@ -1014,15 +1073,31 @@
     "\n",
     "# Alternatively, ndarray_to_instances\n",
     "import weka.core.converters as wekaconv\n",
-    "print(X_train_2D_t_emb.shape)\n",
     "y_train_res_np = y_train_res.to_numpy(copy=True).reshape(-1, 1)\n",
-    "print(y_train_res_np.shape)\n",
+    "# print(y_train_res_np.shape)\n",
+    "#train_resampled['target']\n",
+    "best100np_alt = bestDataDict['100'].to_numpy().copy(order='C')\n",
+    "print(best100np_alt.shape)\n",
+    "# train_resampled.to_numpy().copy(order='C')\n",
+    "best100np = train_smpl_100.to_numpy().copy(order='C')\n",
+    "# best100np_alt\n",
     "\n",
-    "arffData = wekaconv.ndarray_to_instances(np.append(X_train_2D_t_emb, values=y_train_res_np, axis=1), \"tsne_subset\")\n",
-    "arffData.class_is_last()\n",
+    "weka_train = wekaconv.ndarray_to_instances(best100np_alt, \"train_resampled\")\n",
+    "\n",
+    "# weka_train = wekaconv.ndarray_to_instances(np.append(X_train_2D_t_emb, values=y_train_res.to_numpy(copy=True).reshape(-1,1), axis=1), \"tsne_train_set\")\n",
+    "# weka_train.class_is_last()\n",
+    "weka_train.class_is_last()\n",
+    "\n",
+    "# x_test_res\n",
+    "weka_test = wekaconv.ndarray_to_instances(np.append(X_test_res.to_numpy().copy(order='C'), values=y_test_res.to_numpy().copy(order='C').reshape(-1,1), axis=1), \"test_set\")\n",
+    "# weka_test = wekaconv.ndarray_to_instances(np.append(X_test_res.to_numpy().copy(order='C'), values=y_test_res.to_numpy().copy(order='C').reshape(-1,1), axis=1), \"test_set\")\n",
+    "weka_test.class_is_last()\n",
+    "\n",
+    "\n",
+    "\n",
     "# pd.concat([X_train_50, y_train_50]\n",
-    "print(X_train_res.shape)\n",
-    "print(y_train_res.shape)\n",
+    "# print(X_train_res.shape)\n",
+    "# print(y_train_res.shape)\n",
     "# train_resampled = pd.concat([X_resampled, y_resampled], axis=1)\n",
     "resData = wekaconv.ndarray_to_instances(train_resampled.to_numpy().copy(order='C'), \"all_features\")\n",
     "# resData = wekaconv.ndarray_to_instances(np.append(X_train_res, values=y_train_res_np, axis=1), \"all_features\")\n",
@@ -1035,8 +1110,8 @@
     "\n",
     "\n",
     "# print(arffData.class_attribute)\n",
-    "print(arffData.get_instance(0))\n",
-    "print(arffData.get_instance(1))"
+    "print(weka_train.get_instance(0))\n",
+    "# print(weka_test.get_instance(0))"
    ]
   },
   {
@@ -1049,22 +1124,42 @@
     "# First create a Filter to do the job\n",
     "from weka.filters import Filter\n",
     "nominaliser = Filter(classname='weka.filters.unsupervised.attribute.NumericToNominal', options=['-R', 'last']) \n",
-    "nominaliser.inputformat(arffData)\n",
+    "renominaliser = Filter(classname='weka.filters.unsupervised.attribute.NumericToNominal', options=['-R', 'last']) \n",
+    "\n",
+    "randomiser = Filter(classname='weka.filters.unsupervised.instance.Randomize', options=['-S', '42'])\n",
+    "\n",
+    "# nominaliser.inputformat(weka_train)\n",
     "bigNominaliser = Filter(classname='weka.filters.unsupervised.attribute.NumericToNominal', options=['-R', 'last']) \n",
     "bigNominaliser.inputformat(resData)\n",
     "\n",
-    "# # Second, apply the filter to the classifer\n",
-    "# # filteredClassifier doesn't seem to be working - use the simple classes in series.\n",
-    "# from weka.classifiers import FilteredClassifier\n",
-    "# filteredClassifier = FilteredClassifier()\n",
-    "# filteredClassifier.filter = nominaliser\n",
-    "# filteredClassifier.classifier = classifier\n",
+    "# Normalize\n",
+    "# normaliser = Filter(classname='weka.filters.unsupervised.attribute.Normalize', options=['-S', '1.0', '-T', '0.0']) \n",
+    "standardiser = Filter(classname='weka.filters.unsupervised.attribute.Standardize') \n",
     "\n",
-    "# filtered...\n",
-    "filteredData = nominaliser.filter(arffData)\n",
+    "# weka.filters.unsupervised.attribute.Normalize -S 1.0 -T 0.0\n",
+    "\n",
+    "# Use PCA to reduce dimensionality. Default Weka settings\n",
+    "pcaFilter = Filter(classname='weka.filters.unsupervised.attribute.PrincipalComponents', options=['-R', '0.95', '-A', '5', '-M', '-1']) \n",
+    "\n",
+    "# weka.filters.unsupervised.attribute.PrincipalComponents -R 0.95 -A 5 -M -1\n",
+    "\n",
+    "# Finally, apply the filter to the classifer\n",
+    "nominaliser.inputformat(weka_train)\n",
+    "standardiser.inputformat(weka_train)\n",
+    "pcaFilter.inputformat(weka_train)\n",
+    "randomiser.inputformat(weka_train)\n",
+    "\n",
+    "partFilteredData = randomiser.filter(standardiser.filter(nominaliser.filter(weka_train)))\n",
+    "\n",
+    "renominaliser.inputformat(partFilteredData)\n",
+    "\n",
+    "filteredData = renominaliser.filter(partFilteredData)\n",
+    "filteredData.class_is_last()\n",
+    "\n",
+    "print(filteredData.get_instance(5000))\n",
     "from weka.core.converters import Saver\n",
     "saver = Saver(classname=\"weka.core.converters.ArffSaver\")\n",
-    "saver.save_file(filteredData, \"filtered.arff\")"
+    "saver.save_file(weka_train, \"weka_train.arff\")"
    ]
   },
   {
@@ -1077,22 +1172,36 @@
     "from weka.core.classes import Random\n",
     "\n",
     "# evaluation = Evaluation(filteredData)\n",
-    "# # print (evaluation.evaluate_model())\n",
+    "# print (evaluation.evaluate_model())\n",
     "# evaluation.evaluate_train_test_split(classifier, filteredData, 66.7, rnd=Random(42))\n",
     "# print(evaluation.header)\n",
     "\n",
     "\n",
-    "def run_weka_test(data, classifier):\n",
-    "    eva = Evaluation(data)\n",
-    "    eva.evaluate_train_test_split(classifier, data, 66.7, rnd=Random(42))\n",
+    "def run_weka_test(train_data, arg_classifier, test_data):\n",
+    "    eva = Evaluation(train_data)\n",
+    "    arg_classifier.build_classifier(train_data)\n",
+    "#     eva.test_model(classifier, test_data)\n",
+    "    eva.evaluate_train_test_split(classifier, train_data, 66.7, rnd=Random(42))\n",
+    "#     print(classifier)\n",
     "    return eva\n",
     "\n",
-    "def print_results(evaluation):\n",
-    "    print(f\"{evaluation.percent_correct}% correct\")\n",
-    "    print(f\"{evaluation.percent_incorrect}% incorrect\")\n",
-    "    print(f\"{evaluation.precision(filteredData.class_index)} precision\")\n",
-    "    print(f\"{evaluation.recall(filteredData.class_index)} recall\")\n",
-    "    plot_confusion_matrix(evaluation.confusion_matrix, target_names=y_train_res.unique().sort())\n"
+    "def print_results(evaluation, name):\n",
+    "#     print(filteredData.class_index)\n",
+    "#     print(f\"{evaluation.percent_correct}% correct\")\n",
+    "#     print(f\"{evaluation.percent_incorrect}% incorrect\")\n",
+    "#     print(evaluation.confusion_matrix)\n",
+    "    print(f\"{evaluation.summary()}\")\n",
+    "\n",
+    "#     print(f\"{evaluation.num_true_positives(filteredData.class_index)} true positive count\")\n",
+    "#     print(f\"{evaluation.num_false_positives(filteredData.class_index)} false positive count\")\n",
+    "#     print(f\"{evaluation.num_true_negatives(filteredData.class_index)} true negative count\")\n",
+    "\n",
+    "#     print(f\"{evaluation.recall(filteredData.class_index)} recall\")\n",
+    "    plot_confusion_matrix(evaluation.confusion_matrix, target_names=y_train_res.unique().sort(), title=name)\n",
+    "    return evaluation\n",
+    "\n",
+    "# def save_results(name, evaluation):\n",
+    "    "
    ]
   },
   {
@@ -1102,17 +1211,21 @@
    "outputs": [],
    "source": [
     "# test with simple feature selection \n",
-    "print(f\"\\nK2, 1 parent, :\\n __________________________________\")\n",
+    "print(f\"\\nK2, 1 parent:\\n __________________________________\")\n",
     "print(data_train_20.shape)\n",
     "arff_data_train_20 = wekaconv.ndarray_to_instances(data_train_20.to_numpy().copy(order='C'), \"20_features\")\n",
     "arff_data_train_20.class_is_last()\n",
     "\n",
+    "arff_data_test_20 = wekaconv.ndarray_to_instances(data_test_20.to_numpy().copy(order='C'), \"20_features_test\")\n",
+    "arff_data_test_20.class_is_last()\n",
     "\n",
     "nominaliser_side = Filter(classname='weka.filters.unsupervised.attribute.NumericToNominal', options=['-R', 'last']) \n",
     "nominaliser_side.inputformat(arff_data_train_20)\n",
-    "evalu = run_weka_test(nominaliser_side.filter(arff_data_train_20), k2classifiers[0])\n",
-    "print_results(evalu)\n",
-    "print(evalu.confusion_matrix)"
+    "print(f\"train: {arff_data_train_20.num_attributes} attributes, {arff_data_train_20.num_instances} instances\")\n",
+    "print(f\"test: {arff_data_test_20.num_attributes} attributes, {arff_data_test_20.num_instances} instances\")\n",
+    "\n",
+    "evalu = run_weka_test(nominaliser_side.filter(arff_data_train_20), k2classifiers[0], arff_data_test_20)\n",
+    "print_results(evalu, 'K2 Classifier; 1 parent, 20 raw features')"
    ]
   },
   {
@@ -1125,18 +1238,21 @@
     "\n",
     "# Naive Bayes\n",
     "print(f\"\\nNaive Bayes Classifier (for comparison):\\n __________________________________\")\n",
-    "print_results(run_weka_test(filteredData, NBClassifier))\n",
+    "print(f\"train: {filteredData.num_attributes} attributes, {filteredData.num_instances} instances\")\n",
+    "print(f\"test: {weka_test.num_attributes} attributes, {weka_test.num_instances} instances\")\n",
+    "print_results(run_weka_test(filteredData, NBClassifier, weka_test), \"Naive Bayes Classifier; 100 features\")\n",
     "\n",
     "# K2\n",
     "for i, cls in enumerate(k2classifiers):\n",
     "\n",
     "    s = 's' if i != 0 else ''\n",
-    "    print(f\"\\nK2 Classifier, {i+1} Parent{s}:\\n __________________________________\")\n",
-    "    print_results(run_weka_test(filteredData, cls))\n",
+    "    title = f\"K2 Classifier, {i+1} Parent{s}; 100 features\"\n",
+    "    print(f\"\\n{title}:\\n __________________________________\")\n",
+    "    print_results(run_weka_test(filteredData, cls, weka_test), title)\n",
     "\n",
     "# TAN\n",
     "print(f\"\\nTAN Classifier:\\n __________________________________\")\n",
-    "print_results(run_weka_test(filteredData, tanClassifier))\n"
+    "print_results(run_weka_test(filteredData, tanClassifier, weka_test), \"TAN Classifier; 100 features\")\n"
    ]
   },
   {
@@ -1156,7 +1272,11 @@
    "source": [
     "# save trained classifiers\n",
     "import weka.core.serialization as cereal\n",
-    "cereal.write('tanClassifier.saved', tanClassifier)\n",
+    "cereal.write('evalu.saved', evalu)\n",
+    "for i, cls in enumerate(k2classifiers):\n",
+    "    s = 's' if i!=0 else ''\n",
+    "    cereal.write(f'k2classifier{i+1}parent{s}.saved', k2classifiers[i])\n",
+    "\n",
     "# with open('tanClassifier.pickle', 'wb') as f:\n",
     "#     # Pickle the 'data' dictionary using the highest protocol available.\n",
     "#     pickle.dump(tanClassifier, f, pickle.HIGHEST_PROTOCOL)"
@@ -1169,7 +1289,11 @@
    "outputs": [],
    "source": [
     "read_tan = Classifier(jobject=cereal.read('tanClassifier.saved'))\n",
-    "print(read_tan.info)"
+    "print(\"read_tan:\\n\", read_tan)\n",
+    "print(\"original tan:\\n\", tanClassifier)\n",
+    "# read_evalu = Evaluation(jobject=cereal.read('evalu.saved'))\n",
+    "\n",
+    "# print(\"read evalu:\\n\", read_evalu)"
    ]
   },
   {
@@ -1178,25 +1302,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from weka.core.classes import Random\n",
+    "# # used for composing experiment format\n",
+    "# from weka.core.classes import Random\n",
     "\n",
-    "evaluation = Evaluation(filteredData)\n",
-    "# print (evaluation.evaluate_model())\n",
-    "evaluation.evaluate_train_test_split(tanClassifier, filteredData, 66.7, rnd=Random(42))\n",
-    "print(evaluation.header)\n",
-    "\n",
-    "\n",
-    "print(f\"Instances: {filteredData.num_instances}\\n\")\n",
-    "print(f\"Attributes: {filteredData.num_attributes}\\n\")\n",
-    "print(f\"{evaluation.percent_correct}% correct\")\n",
-    "print(f\"{evaluation.percent_incorrect}% incorrect\")\n",
+    "# evaluation = Evaluation(filteredData)\n",
+    "# # print (evaluation.evaluate_model())\n",
+    "# evaluation.evaluate_train_test_split(tanClassifier, filteredData, 66.7, rnd=Random(42))\n",
+    "# # print(evaluation.header)\n",
     "\n",
     "\n",
-    "print(f\"{evaluation.precision(filteredData.class_index)} precision\")\n",
-    "print(f\"{evaluation.recall(filteredData.class_index)} recall\")\n",
+    "# print(f\"Instances: {filteredData.num_instances}\\n\")\n",
+    "# print(f\"Attributes: {filteredData.num_attributes}\\n\")\n",
+    "# print(f\"{evaluation.percent_correct}% correct\")\n",
+    "# print(f\"{evaluation.percent_incorrect}% incorrect\")\n",
     "\n",
-    "print (evaluation.confusion_matrix)\n",
-    "plot_confusion_matrix(evaluation.confusion_matrix, target_names=y_train_res.unique())"
+    "\n",
+    "# # print(f\"{evaluation.precision(filteredData.class_index)} precision\")\n",
+    "# # print(f\"{evaluation.recall(filteredData.class_index)} recall\")\n",
+    "\n",
+    "# print (evaluation.confusion_matrix)\n",
+    "# plot_confusion_matrix(evaluation.confusion_matrix, target_names=y_train_res.unique())"
    ]
   },
   {
