Use Weka filters after making the train-test split, not before.
Otherwise, it would be cheating.

--- a/jupyter/notebooks/modeling/assessment-DMML.ipynb
+++ b/jupyter/notebooks/modeling/assessment-DMML.ipynb
@@ -1252,7 +1252,8 @@
    "outputs": [],
    "source": [
     "data_train_20 = pd.concat([X_train_20, y_train_20], axis=1)\n",
-    "data_test_20 = pd.concat([X_test_20, y_test_20], axis=1)"
+    "data_test_20 = pd.concat([X_test_20, y_test_20], axis=1)\n",
+    "data_20_features = pd.concat([X_train_20, X_test_20], axis=0) # ask weka to split later"
    ]
   },
   {
@@ -1262,7 +1263,7 @@
    "outputs": [],
    "source": [
     "# Output to arff for verification in Weka gui\n",
-    "pandas2arff(data_train_20, 'data_train_20.arff')\n",
+    "# pandas2arff(data_train_20, 'data_train_20.arff')\n",
     "\n"
    ]
   },
@@ -1478,15 +1479,18 @@
     "\n",
     "# weka.filters.unsupervised.attribute.PrincipalComponents -R 0.95 -A 5 -M -1\n",
     "\n",
-    "# Finally, apply the filter to the classifer\n",
+    "# Finally, apply the filters to the data\n",
     "nominaliser.inputformat(weka_train)\n",
     "standardiser.inputformat(weka_train)\n",
     "pcaFilter.inputformat(weka_train)\n",
     "randomiser.inputformat(weka_train)\n",
     "\n",
+    "# necessary for getting the input formats\n",
     "partFilteredData = randomiser.filter(standardiser.filter(nominaliser.filter(weka_train)))\n",
     "\n",
     "renominaliser.inputformat(partFilteredData)\n",
+    "\n",
+    "filterSet = [nominaliser, standardiser, randomiser, renominaliser]\n",
     "\n",
     "filteredData = renominaliser.filter(partFilteredData)\n",
     "filteredData.class_is_last()\n",
@@ -1505,19 +1509,27 @@
    "source": [
     "# Define experiment\n",
     "from weka.core.classes import Random\n",
+    "from weka.classifiers import FilteredClassifier\n",
     "\n",
     "# evaluation = Evaluation(filteredData)\n",
     "# print (evaluation.evaluate_model())\n",
     "# evaluation.evaluate_train_test_split(classifier, filteredData, 66.7, rnd=Random(42))\n",
     "# print(evaluation.header)\n",
     "\n",
+    "def curry_filters(arg_filterSet, arg_classifier):\n",
+    "    fc = FilteredClassifier()\n",
     "\n",
-    "def run_weka_test(train_data, arg_classifier, test_data):\n",
-    "    eva = Evaluation(train_data)\n",
-    "    arg_classifier.build_classifier(train_data)\n",
-    "#     eva.test_model(classifier, test_data)\n",
-    "    eva.evaluate_train_test_split(classifier, train_data, 66.7, rnd=Random(42))\n",
-    "#     print(classifier)\n",
+    "    for i, filt in enumerate(arg_filterSet):\n",
+    "        tmp_fc = FilteredClassifier()\n",
+    "        tmp_fc.classifier = Classifier.make_copy(arg_classifier) if i == 0 else fc\n",
+    "        tmp_fc.filter = filt\n",
+    "        fc = tmp_fc\n",
+    "#     fc.filter = Filter.make_copy(arg_filter)\n",
+    "    return fc\n",
+    "\n",
+    "def run_weka_test(data, classifier):\n",
+    "    eva = Evaluation(data)\n",
+    "    eva.evaluate_train_test_split(classifier, data, 66.7, rnd=Random(42))\n",
     "    return eva\n",
     "\n",
     "def print_results(evaluation, name):\n",
@@ -1551,15 +1563,11 @@
     "arff_data_train_20 = wekaconv.ndarray_to_instances(data_train_20.to_numpy().copy(order='C'), \"20_features\")\n",
     "arff_data_train_20.class_is_last()\n",
     "\n",
-    "arff_data_test_20 = wekaconv.ndarray_to_instances(data_test_20.to_numpy().copy(order='C'), \"20_features_test\")\n",
-    "arff_data_test_20.class_is_last()\n",
-    "\n",
     "nominaliser_side = Filter(classname='weka.filters.unsupervised.attribute.NumericToNominal', options=['-R', 'last']) \n",
     "nominaliser_side.inputformat(arff_data_train_20)\n",
-    "print(f\"train: {arff_data_train_20.num_attributes} attributes, {arff_data_train_20.num_instances} instances\")\n",
-    "print(f\"test: {arff_data_test_20.num_attributes} attributes, {arff_data_test_20.num_instances} instances\")\n",
+    "print(f\"data: {arff_data_train_20.num_attributes} attributes, {arff_data_train_20.num_instances} instances\")\n",
     "\n",
-    "evalu = run_weka_test(nominaliser_side.filter(arff_data_train_20), k2classifiers[0], arff_data_test_20)\n",
+    "evalu = run_weka_test(nominaliser_side.filter(arff_data_train_20), curry_filters([nominaliser_side], k2classifiers[0]))\n",
     "print_results(evalu, 'K2 Classifier; 1 parent, 20 raw features')"
    ]
   },
@@ -1573,9 +1581,11 @@
     "\n",
     "# Naive Bayes\n",
     "print(f\"\\nNaive Bayes Classifier (for comparison):\\n __________________________________\")\n",
-    "print(f\"train: {filteredData.num_attributes} attributes, {filteredData.num_instances} instances\")\n",
-    "print(f\"test: {weka_test.num_attributes} attributes, {weka_test.num_instances} instances\")\n",
-    "print_results(run_weka_test(filteredData, NBClassifier, weka_test), \"Naive Bayes Classifier; 100 features\")\n",
+    "print(f\"Data: {filteredData.num_attributes} attributes, {filteredData.num_instances} instances\")\n",
+    "nominal_target_data = nominaliser.filter(weka_train)\n",
+    "\n",
+    "print_results(run_weka_test(nominal_target_data, curry_filters(filterSet, NBClassifier)), \"Naive Bayes Classifier; 100 features\")\n",
+    "# print_results(run_weka_test(filteredData, NBClassifier), \"Naive Bayes Classifier; 100 features\")\n",
     "\n",
     "# K2\n",
     "for i, cls in enumerate(k2classifiers):\n",
@@ -1583,11 +1593,11 @@
     "    s = 's' if i != 0 else ''\n",
     "    title = f\"K2 Classifier, {i+1} Parent{s}; 100 features\"\n",
     "    print(f\"\\n{title}:\\n __________________________________\")\n",
-    "    print_results(run_weka_test(filteredData, cls, weka_test), title)\n",
+    "    print_results(run_weka_test(nominal_target_data, curry_filters(filterSet, cls)), title)\n",
     "\n",
     "# TAN\n",
     "print(f\"\\nTAN Classifier:\\n __________________________________\")\n",
-    "print_results(run_weka_test(filteredData, tanClassifier, weka_test), \"TAN Classifier; 100 features\")\n"
+    "print_results(run_weka_test(nominal_target_data, curry_filters(filterSet, tanClassifier)), \"TAN Classifier; 100 features\")\n"
    ]
   },
   {
@@ -1707,6 +1717,15 @@
     "#         print(completed.returncode)\n",
     "# except:\n",
     "#     print(traceback.format_exc())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jvm.stop() # finished with weka; release the memory - we're going to need it"
    ]
   },
   {
