Adding other clustering algorithms

--- a/jupyter/notebooks/modeling/assessment-DMML.ipynb
+++ b/jupyter/notebooks/modeling/assessment-DMML.ipynb
@@ -17,6 +17,7 @@
     "from sklearn.metrics import confusion_matrix\n",
     "from sklearn.feature_selection import SelectKBest\n",
     "from sklearn.feature_selection import chi2\n",
+    "from sklearn.cluster import KMeans\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -1745,7 +1746,6 @@
    },
    "outputs": [],
    "source": [
-    "from sklearn.cluster import KMeans\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "\n",
@@ -1781,8 +1781,6 @@
    },
    "outputs": [],
    "source": [
-    "from sklearn.cluster import KMeans\n",
-    "\n",
     "# Training sample for train_smpl_<label> \n",
     "training_dataframe = [train_smpl_0.copy(), train_smpl_1.copy(), train_smpl_2.copy(), train_smpl_3.copy(), train_smpl_4.copy(),\n",
     "                      train_smpl_5.copy(), train_smpl_6.copy(), train_smpl_7.copy(), train_smpl_8.copy(), train_smpl_9.copy()]\n",
@@ -1790,31 +1788,6 @@
     "kmeans = KMeans(n_clusters=2, random_state=2)\n",
     "for dataframe in training_dataframe:\n",
     "    dataframe[\"cluster\"] = kmeans.fit_predict(dataframe[dataframe.columns[:-1]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "is_executing": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# import matplotlib.pyplot as plt\n",
-    "# import numpy as np\n",
-    "\n",
-    "#Fitting the PCA algorithm with our Data\n",
-    "# pca = PCA().fit(data_rescaled)\n",
-    "\n",
-    "#Plotting the Cumulative Summation of the Explained Variance\n",
-    "# plt.figure()\n",
-    "# plt.plot(np.cumsum(pca.explained_variance_ratio_))\n",
-    "# plt.xlabel('Number of Components')\n",
-    "# plt.ylabel('Variance (%)') #for each component\n",
-    "# plt.title('Pulsar Dataset Explained Variance')\n",
-    "# plt.show()"
    ]
   },
   {
@@ -1923,19 +1896,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "is_executing": false
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.cluster import DBSCAN\n",
+    "from sklearn.decomposition import PCA\n",
     "\n",
-    "smpl_data = train_resampled.copy()\n",
-    "\n",
-    "dbscan = DBSCAN(eps=300, min_samples=30)\n",
-    "smpl_data[\"cluster\"] = dbscan.fit_predict(smpl_data[smpl_data.columns[:-1]])"
+    "pca = PCA(n_components=50)\n",
+    "smpl_data_pca = pd.DataFrame(pca.fit_transform(train_resampled[train_resampled.columns[:-1]]))"
    ]
   },
   {
@@ -1950,10 +1917,11 @@
    "source": [
     "from sklearn.cluster import OPTICS\n",
     "\n",
-    "smpl_data = train_resampled.copy()\n",
+    "smpl_data_optics = smpl_data_pca.copy()\n",
     "\n",
-    "optics = OPTICS(min_samples=30)\n",
-    "smpl_data[\"cluster\"] = optics.fit_predict(smpl_data[smpl_data.columns[:-1]])"
+    "optics = OPTICS(min_samples=45, max_eps=450)\n",
+    "smpl_data_optics[\"target\"] = train_resampled[\"target\"]\n",
+    "smpl_data_optics[\"cluster\"] = optics.fit_predict(smpl_data_optics[smpl_data_optics.columns[:-1]])"
    ]
   },
   {
@@ -1964,10 +1932,11 @@
    "source": [
     "from sklearn.cluster import Birch\n",
     "\n",
-    "smpl_data = train_resampled.copy()\n",
+    "smpl_data_birch = smpl_data_pca.copy()\n",
     "\n",
-    "birch = Birch(threshold=0.5, branching_factor=50, n_clusters=8)\n",
-    "smpl_data[\"cluster\"] = birch.fit_predict(smpl_data[smpl_data.columns[:-1]])"
+    "birch = Birch(n_clusters=10)\n",
+    "smpl_data_birch[\"target\"] = train_resampled[\"target\"]\n",
+    "smpl_data_birch[\"cluster\"] = birch.fit_predict(smpl_data_birch[smpl_data_birch.columns[:-1]])"
    ]
   },
   {
@@ -1982,11 +1951,11 @@
    "source": [
     "from sklearn.cluster import MeanShift\n",
     "\n",
-    "print('a')\n",
-    "smpl_data = train_resampled.copy()\n",
+    "smpl_data_mean_shift = smpl_data_pca.copy()\n",
     "\n",
-    "mean_shift = MeanShift(bandwidth=100)\n",
-    "smpl_data[\"cluster\"] = mean_shift.fit_predict(smpl_data[smpl_data.columns[:-1]])"
+    "mean_shift = MeanShift(bandwidth=2300)\n",
+    "smpl_data_mean_shift[\"target\"] = train_resampled[\"target\"]\n",
+    "smpl_data_mean_shift[\"cluster\"] = mean_shift.fit_predict(smpl_data_mean_shift[smpl_data_mean_shift.columns[:-1]])"
    ]
   },
   {
@@ -1999,9 +1968,34 @@
    },
    "outputs": [],
    "source": [
-    "print(max(dbscan.labels_))\n",
+    "print(f\"Training resample data with OPTICS clustering:\")\n",
+    "plot_clustering(smpl_data_optics, 10, max(optics.labels_))\n",
     "\n",
-    "plot_clustering(smpl_data, 10, max(dbscan.labels_))"
+    "print(f\"Training resample data with Birch clustering:\")\n",
+    "plot_clustering(smpl_data_birch, 10, 10)\n",
+    "\n",
+    "print(f\"Training resample data with MeanShift clustering:\")\n",
+    "plot_clustering(smpl_data_mean_shift, 10, max(mean_shift.labels_))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 13. Other clustering algorithms notes\n",
+    "\n",
+    "We are testing the resampled dataset with 3 different clustering algorithm: Optics, Birch and MeanShift. To improving speed of theses clustering algorithms, we are using PCA which reduce the number of component to analyse.\n",
+    "\n",
+    "Optics algorithm views clusters as areas of high density separated by areas of low density. Clusters found by Optics can be any shape and Optics can also ignore sample so it won't classify to any cluster. We use parameter for Optics 45 sample minimum in each cluster and 450 for the density necessary to form a cluster.\n",
+    "\n",
+    "Birch algorithm reduces the input data to a set of subclusters and then do the clustering on theses subclusters. For this algorithm we are using the default value of scikit learn which are 0.5 threshold and 50 for branching factor.\n",
+    "\n",
+    "MeanShift algorithm is a centroid based algorithm, which works by updating candidates for centroids to be the mean of the points within a given region. We are using 2300 for bandwidth. \n",
+    "\n",
+    "Even we other clustering algorithms the cluster result are not very successful, it doesn't separate the classes and for each test there are about the same proportion of cluster for each class.\n",
+    "\n",
+    "\n",
+    "(The descriptions of algorithms is coming from: https://scikit-learn.org/stable/modules/clustering.html)"
    ]
   },
   {
@@ -2144,20 +2138,6 @@
     "make_plot(\"Image 6 Removed - Stop Sign\", result_6)\n",
     "print(f\"Result 6: {result_6}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -2176,7 +2156,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
