Fix runtime; missing one character

--- a/jupyter/notebooks/modeling/assessment-DMML.ipynb
+++ b/jupyter/notebooks/modeling/assessment-DMML.ipynb
@@ -1278,7 +1278,7 @@
     "# Finally, apply the filters to the data\n",
     "nominaliser.inputformat(weka_train)\n",
     "standardiser.inputformat(weka_train)\n",
-    "pcaFilter.inputformat(weka_train)\n",
+    "# pcaFilter.inputformat(weka_train)\n",
     "randomiser.inputformat(weka_train)\n",
     "\n",
     "# necessary for getting the input formats\n",
